--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ make ]
+    
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 
 jobs:
@@ -15,10 +18,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
-      - name: Install pydoc
+          python-version: 3.9.5
+      - name: Install py2exe
         run: |
-          pip install pydoc
+          pip install py2exe
       - name: test
         run: |
           make all
