--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Build_with_make
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ make ]
+    branches: [ main ]
     
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,6 +22,11 @@ jobs:
       - name: Install py2exe
         run: |
           pip install py2exe
-      - name: test
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: build with ant
         run: |
-          make all
+          ant
