--- a/.github/workflows/ui_test.yml
+++ b/.github/workflows/ui_test.yml
@@ -1,8 +1,7 @@
 name: ui_testing
 on:
   schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0,3 * * *'
+    - cron: "*/5 * * * *"
 
 jobs:
   build:
