--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint
           pip install py2exe
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: build with ant
+      - name: build exe
         run: |
-          ant unittest
-          ant make_exe
-      - name: PyBuilder Action
-        uses: pybuilder/build@v5
+          py setup_exe.py py2exe
+      - name: Pybuilder
+        run: |
+          pip install pybuilder
+          pyb
