--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint
           pip install py2exe
+          pip install -r requirements.txt
       - name: Pybuilder
         run: |
           pip install pybuilder
