--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,5 @@ jobs:
           py setup_exe.py py2exe
       - name: run exe
         run: |
-          dist/main.exe
+          cd main\dist
+          main.exe
