--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,14 +37,15 @@ jobs:
         run: |
           cd main
           py setup_exe.py py2exe
-
+      - name: zip up dist
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r dist.zip dist
       - name: Upload to gdrive
-        run: |
-          cd main\dist
         uses: adityak74/google-drive-upload-git-action@main
         with:
           credentials: ${{ secrets.gdrive_credentials }}
-          filename: "main.exe"
+          filename: "dist.zip"
           folderId: ${{ secrets.folder_Id }}
           overwrite: "true"
 
