--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,14 +45,12 @@ jobs:
           filename: 'release.zip'
           directory: 'main\\dist'
 
-
-      - name: Upload to gdrive
-        uses: adityak74/google-drive-upload-git-action@main
+      - name: Upload a file to Google Drive
+        uses: willo32/google-drive-upload-action@v1
         with:
+          target: "dist.zip"
           credentials: ${{ secrets.gdrive_credentials }}
-          filename: "dist.zip"
-          folderId: ${{ secrets.folder_Id }}
-          overwrite: "true"
+          parent_folder_id: ${{ secrets.folder_Id }}
 
 
 
