test g-drive deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,11 @@
 name: Deplyment
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 
@@ -27,19 +24,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install py2exe
           pip install -r requirements.txt
-
-      - name: Python Markdown Documentation
-        uses: jbheard/markdown-docs@v0.1
-        with:
-          src_path: 'main'
-          dst_path: 'docs'
-
-      - name: Upload doc to Google Drive
-        uses: willo32/google-drive-upload-action@v1
-        with:
-          target: doc
-          credentials: ${{ secrets.gdrive_credentials }}
-          parent_folder_id: ${{ secrets.folder_Id }}
 
       - name: build exe
         run: |
@@ -63,3 +47,22 @@ jobs:
 
 
 
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Python Markdown Documentation
+        uses: jbheard/markdown-docs@v0.1
+        with:
+          src_path: 'main'
+          dst_path: 'docs'
+
+      - name: Upload doc to Google Drive
+        uses: willo32/google-drive-upload-action@v1
+        with:
+          target: doc
+          credentials: ${{ secrets.gdrive_credentials }}
+          parent_folder_id: ${{ secrets.folder_Id }}
