--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -19,9 +19,9 @@ jobs:
           src_path: 'main'
           dst_path: 'docs'
 
-      - name: Upload doc to Google Drive
-        uses: willo32/google-drive-upload-action@v1
+      - name: Upload To Github Release
+        uses: xresloader/upload-to-github-release@v1.3.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          target: docs
-          credentials: ${{ secrets.gdrive_credentials }}
-          parent_folder_id: ${{ secrets.doc_folder_Id }}
+          file: "docs\*.md"
