--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Upload docs to Google Drive
         uses: willo32/google-drive-upload-action@v1
         with:
-          target: docs/
+          target: readme.md
           credentials: ${{ secrets.gdrive_credentials }}
-          parent_folder_id: ${{ secrets.folder_Id }}
+          parent_folder_id: ${{ secrets.doc_folder_Id }}
